--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,3 +1,3 @@
 [defaults]
-inventory=/Users/helenhaveloh/workspace/aws-23-07/ansible/example-01/inventory.ini
+inventory=../inventory.ini
 host_key_checking = False
